--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,10 @@ body {
     background-color: darkcyan;
     color: azure;
 }
+
+#colorblock {
+    background-color: crimson;
+    border: 2px solid plum;
+    height: 50px;
+    width: 50px;
+}
